Fix code field inconsistent behavior on visibility change

--- a/src/app/views/welcome/login/code-field/code-field.component.scss
+++ b/src/app/views/welcome/login/code-field/code-field.component.scss
@@ -24,4 +24,5 @@ TextField {
   color: $accent;
   font-size: 18;
   border-bottom-width: 0;
+  letter-spacing: 0.1;
 }
